--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,9 +22,9 @@ import Layout from '../layouts/Layout.astro';
 <Entrada/>
 <Productos/>
 <Bento/>
-<SectionContainer id="Cotizacion">
-    <Cotizacion/>
-</SectionContainer>
+<!-- <SectionContainer id="Cotizacion">
+ <Cotizacion/>
+</SectionContainer> -->
 <Historia/>
 <Testimonios/>
 <Contacto/>
