--- a/src/components/Historia.astro
+++ b/src/components/Historia.astro
@@ -16,7 +16,7 @@
         <div class="w-full md:w-1/2">
           <div class="bg-gray-50 p-6 md:p-8 rounded-lg shadow-sm h-full">
             <img 
-              src="/objetivos.webp" 
+              src="/misiondeempresa.webp" 
               alt="International Shipping" 
               class="w-full h-60 object-cover rounded-lg mb-2"
             />
