--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Layout from '../layouts/Layout.astro';
  <Cotizacion/>
 </SectionContainer> -->
 <Historia/>
-<Testimonios/>
+<!-- <Testimonios/> -->
 <Contacto/>
 <Footer/>
 </Layout>
